--- a/lesson1-org2.html
+++ b/lesson1-org2.html
@@ -9,7 +9,7 @@
 	<P>担当　中村直人</center>
 　　　　<P>この授業では、整数論を学びその応用として暗号理論を紹介します。</p>
 <p>電卓でも可能ですができればプログラムでやりましょう。</p>
-<p><a href="">もどる</a></p>
+<p><a href="/">もどる</a></p>
         <P><img src="ganba.png" width="128" height="128" alt="頑張ろう">
    </BODY>
 </HTML>
